[package]
name = "yaoiprint"
version = "0.1.0"
edition = "2024"
description = "A terminal CLI that prints a randomly selected ASCII art image in a random color."
license = "MIT"
repository = "https://github.com/Andrew-McCall/yaoi-rs"
categories = ["command-line-utilities"]
keywords = ["cli", "ascii-art", "terminal", "art"]

[[bin]]
name = "yaoiprint"
path = "src/main.rs"

[dependencies]
rand = "0.8"
colour = "1"
