[package]
name = "yaoiprint"
version = "1.69.67"
edition = "2024"
description = "A terminal CLI that prints a randomly selected ASCII art image in a random color."
license = "MIT"
repository = "https://github.com/Andrew-McCall/yaoiprint"
homepage = "https://github.com/Andrew-McCall/yaoiprint"
categories = ["command-line-utilities"]
keywords = ["cli", "ascii-art", "terminal", "art", "yaoi"]
readme = "README.md"

[[bin]]
name = "yaoiprint"
path = "src/main.rs"

[dependencies]
rand = "0.10.0"
colour = "2.1.0"
